@@ -38,6 +38,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20426: When passing the re.DEBUG flag, re.compile() displays the
+  debug output every time it is called, regardless of the compilation cache.
+
 - Issue #20368: The null character now correctly passed from Tcl to Python (in
   unicode strings only).  Improved error handling in variables-related commands.
 
